--- a/recipes/bakso.html
+++ b/recipes/bakso.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakso</title>
 </head>
-<body>
+<body style="background-color:lightskyblue;">
     <h1>Bakso</h1>
     <img src="bakso.jpg" width='500' alt="Bakso image">
     <h3>Description</h3>
@@ -35,7 +35,8 @@
     <ol>
         <li>Giling daging pake blender sedikit demi sedikit</li>
         <li>Campur semua bahan ke blender, jgn lupa pake air dingin buat menghaluskannya</li>
-        <li>Setelah jadi, buat bulatan dgn menggunakan tangan. Lalu masukkan ke air mendidih. br
+        <li>Setelah jadi, buat bulatan dgn menggunakan tangan. <br> 
+            Lalu masukkan ke air mendidih. <br>
             Dalam air rebusan kaldu lebih enak dimasukkan sumsum sapi buat kuahnya.</li>
         <li>Done. Selamat mencoba</li>
     </ol>
