--- a/recipes/teriyaki.html
+++ b/recipes/teriyaki.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teriyaki</title>
 </head>
-<body>
+<body style="background-color:khaki;">
     <h1>Teriyaki</h1>
     <img src="teriyaki.jpg" alt="teriyaki image" width='500'>
     <h3>Description</h3>
