--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="background-color:rgb(230, 176, 197);">
     <h1>Odin Project</h1>
     <img src="recipes/chef.jpg" alt="chef image" width='500'> <br> <br>
-    <a href="recipes/bakso.html">Bakso</a>
+    <a href="recipes/coffee.html">Coffee</a>
     <br><a href="recipes/french_toast.html">French Toast</a>
     <br><a href="recipes/teriyaki.html">Teriyaki</a>
     <p><sup>credit for images: <a href="www.pixabay.com">pixabay.com</a></sup></p>
